commit today's work

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
             </div>
         </section>
 
+        <section class="section-featured">
+            <div class="container container-centered">
+                <h2 class="header-featured-in">As featured in</h2>
+                <div class="featured-logo-box ">
+                    <img class="featured-logo-img" src="/imgs/logos/business-insider.png" alt="Business Insider logo">
+                    <img class="featured-logo-img" src="/imgs/logos/forbes.png" alt="Forbes logo">
+                    <img class="featured-logo-img" src="/imgs/logos/techcrunch.png" alt="TechCrunch Logo">
+                    <img class="featured-logo-img" src="/imgs/logos/the-new-york-times.png"
+                        alt="The New York Times logo">
+                    <img class="featured-logo-img" src="/imgs/logos/usa-today.png" alt="USA Today logo">
+                </div>
+            </div>
+        </section>
+
         <section class="section-how">
             <div class="container-centered">
                 <span class="subheading">How it works</span>
@@ -109,16 +123,102 @@
         </section>
     </main>
 
+    <section class="section-meals">
+        <div class="container container-centered">
+            <span class="subheading">Meals</span>
+            <h2 class="heading-secondary">OmniFood AI chooses from 5,000+ recipes</h2>
+
+            <div class="container grid grid--3-col">
+                <!-- Meal Column 1 -->
+                <div class="meal">
+                    <img class="meal-img" src=" /imgs/meals/meal-1.jpg" alt="Bowls of food - Japanese Gyozas">
+                    <div class="meal-content">
+                        <span class="tag tag--vegetarian">Vegetarian</span>
+                        <p class="meal-name">Japanese Gyozas</p>
+                        <ul class="meal-attributes">
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span><strong>650</strong> Calories</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                                <span><strong>74</strong> NutriScore &reg;</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                                <span><strong>4.9</strong> rating</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="reader-outline"></ion-icon>
+                                <span><strong>537</strong> reviews</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
 
+                <!-- Meal Column 2 -->
+                <div class="meal">
+                    <img class="meal-img" src=" /imgs/meals/meal-2.jpg" alt="Bowl of Avocado Salad">
+                    <div class="meal-content">
+                        <span class="tag tag--vegan">Vegan</span>
+                        <span class="tag tag--paleo">Paleo</span>
+                        <p class="meal-name">Avocado Salad</p>
+                        <ul class="meal-attributes">
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                                <span><strong>400</strong> Calories</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="restaurant-outline">
+                                </ion-icon>
+                                <span><strong>92</strong> NutriScore &reg;</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="star-outline">
+                                </ion-icon>
+                                <span><strong>4.8</strong> Average rating</span>
+                            </li>
+                            <li class="meal-attribute">
+                                <ion-icon class="meal-icon" name="reader-outline"></ion-icon>
+                                <span><strong>441</strong> reviews</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
 
-    <!-- <section class="section-featured"></section>
-    <section class="section-meals"></section>
-    <section class="section-testimonies"></section>
+                <!-- Meal Column 3 -->
+                <div class="diet">
+                    <h2>Diets</h2>
+                    <ul>
+                        <li>Vegetarian</li>
+                        <li>Vegan</li>
+                        <li>Pescatarian</li>
+                        <li>Gluten-free</li>
+                        <li>Lactose-free</li>
+                        <li>Keto</li>
+                        <li>Paleo</li>
+                        <li>Low FODMAP</li>
+                        <li>Kid-friendly</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--
+    <section class=" section-testimonies">
+    </section>
     <section class="section-pricing"></section>
     <section class="section-cta"></section>
     <section class="section-footer"></section> -->
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 
 </html>
