Completed desktop view of Omnione Project

--- a/index.html
+++ b/index.html
@@ -15,27 +15,21 @@
 </head>
 
 <body>
-
-
-
-
-
     <header class="header">
         <a href="#"><img class="logo" src="/imgs/omnifood-logo.png" alt="Omnifood Logo" /></a>
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a href="#" class="main-nav-link">Section 1</a></li>
-                <li><a href="#" class="main-nav-link">Section 2</a></li>
-                <li><a href="#" class="main-nav-link">Section 3</a></li>
-                <li><a href="#" class="main-nav-link">Section 4</a></li>
-                <li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
+                <li><a href="#" class="main-nav-link">How it works</a></li>
+                <li><a href="#" class="main-nav-link">Meals</a></li>
+                <li><a href="#" class="main-nav-link">Testimonials</a></li>
+                <li><a href="#" class="main-nav-link">Pricing</a></li>
+                <li><a href="#" class="main-nav-link nav-cta">Get Started</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="section-hero">
-
             <div class="hero">
                 <div class="hero-text-box">
                     <h1 class="heading-primary">A healthy meal delivered to your door, every single day </h1>
@@ -126,7 +120,6 @@
                 </div>
         </section>
 
-
         <section class="section-diets">
             <div class="container container">
                 <span class="subheading">Meals</span>
@@ -159,7 +152,6 @@
                             </ul>
                         </div>
                     </div>
-
 
                     <!-- Meal - Column 2 -->
                     <div class="meal">
@@ -245,8 +237,6 @@
             <div class="container testimonial-container">
                 <span class="subheading">Testimonials</span>
                 <h2 class="heading-secondary">Once you try it, you can't go back!</h2>
-                <h2>Testimonials</h2>
-                <span>bla bla bla</span>
 
                 <div class="testimonials-testimonies">
                     <figure class="testimonials-testimony">
@@ -280,7 +270,6 @@
                     </figure>
                 </div>
             </div>
-
 
             <div class="testimonials-gallery">
                 <figure class="gallery-item"><img class="testimonials-img" src="/imgs/gallery/gallery-1.jpg"
@@ -414,7 +403,7 @@
         </section>
 
         <section class="section-cta">
-            <div class="container grid ">
+            <div class="container grid">
                 <div class="cta">
                     <div class="cta-text-box">
                         <h2 class="heading-secondary">Get your first meal for free!</h2>
@@ -451,7 +440,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container grid grid--5-col">
+        <div class="container grid grid--footer">
             <div class="logo-col">
                 <a href="#" class="footer-logo"> <img class="logo" src="/imgs/omnifood-logo.png"
                         alt="Omnifood Logo" /></a>
@@ -507,15 +496,8 @@
         </div>
     </footer>
 
-
-
-
-
-
-
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
-
 
 </html>
