--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- REQUIRED FOR RESPONSIVE DESIGN -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,11 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/queries.css" />
     <title>OmniFood</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header -nav-open">
         <a href="#"><img class="logo" src="/imgs/omnifood-logo.png" alt="Omnifood Logo" /></a>
         <nav class="main-nav">
             <ul class="main-nav-list">
@@ -26,6 +29,11 @@
                 <li><a href="#" class="main-nav-link nav-cta">Get Started</a></li>
             </ul>
         </nav>
+
+        <button class="btn-mobile-nav">
+            <ion-icon class="nav-mobile-icon" name="menu-sharp"></ion-icon>
+            <ion-icon class="nav-mobile-icon" name="close-sharp"></ion-icon>
+        </button>
     </header>
 
     <main>
@@ -60,7 +68,7 @@
         </section>
 
         <section class="section-featured">
-            <div class="container container">
+            <div class="container">
                 <h2 class="header-featured-in">As featured in</h2>
                 <div class="featured-logo-box ">
                     <img class="featured-logo-img" src="/imgs/logos/business-insider.png" alt="Business Insider logo">
@@ -121,11 +129,11 @@
         </section>
 
         <section class="section-diets">
-            <div class="container container">
+            <div class="container">
                 <span class="subheading">Meals</span>
                 <h2 class="heading-secondary">OmniFood AI chooses from 5,000+ recipes</h2>
 
-                <div class="container grid grid--3-col">
+                <div class="diet-col container grid grid--3-col">
                     <!-- Meal - Column 1 -->
                     <div class="meal">
                         <img class="meal-img" src=" /imgs/meals/meal-1.jpg" alt="Bowls of food - Japanese Gyozas">
@@ -173,7 +181,7 @@
                                 <li class="meal-attribute">
                                     <ion-icon class="meal-icon" name="star-outline">
                                     </ion-icon>
-                                    <span><strong>4.8</strong> Average rating</span>
+                                    <span><strong>4.8</strong> Rating</span>
                                 </li>
                                 <li class="meal-attribute">
                                     <ion-icon class="meal-icon" name="reader-outline"></ion-icon>
@@ -234,25 +242,25 @@
         </section>
 
         <section class="section-testimonials">
-            <div class="container testimonial-container">
+            <div class="testimonial-container">
                 <span class="subheading">Testimonials</span>
                 <h2 class="heading-secondary">Once you try it, you can't go back!</h2>
 
                 <div class="testimonials-testimonies">
-                    <figure class="testimonials-testimony">
+                    <figure>
                         <img class="tesimonials-customer-img" src="/imgs/customers/ben.jpg" alt="headshot of customer">
                         <blockquote class="testimonials-quote">The AI algorithm is crazy good, it chooses the right
                             meals for me every time. It's amazing not to worry about food
                             anymore!</blockquote>
                         <p class="testimonial-name">&mdash;Ben Hadley</p>
                     </figure>
-                    <figure class="testimonials-testimony">
+                    <figure>
                         <img class="tesimonials-customer-img" src="/imgs/customers/dave.jpg" alt="headshot of customer">
                         <blockquote class="testimonials-quote">Inexpensive, healthy and great-tasting meals, without
                             even having to order manually! It feels truly magical.</blockquote>
                         <p class="testimonial-name">&mdash;Dave Bryson</p>
                     </figure>
-                    <figure class="testimonials-testimony">
+                    <figure>
                         <img class="tesimonials-customer-img" src="/imgs/customers/hannah.jpg"
                             alt="headshot of customer">
                         <blockquote class="testimonials-quote">I got Omnifood for the whole family, and it frees up so
@@ -260,7 +268,7 @@
                             plastic.</blockquote>
                         <p class="testimonial-name">&mdash;Hannah Smith</p>
                     </figure>
-                    <figure class="testimonials-testimony">
+                    <figure>
                         <img class="tesimonials-customer-img" src="/imgs/customers/steve.jpg"
                             alt="headshot of customer">
                         <blockquote class="testimonials-quote">Omnifood is a life saver! I just started a company, so
@@ -306,7 +314,7 @@
                     <h2 class="heading-secondary">Eating well without breaking the bank</h2>
                 </div>
 
-                <div class="container grid grid--2-col margin-bottom-md">
+                <div class="pricing-container container grid grid--2-col margin-bottom-md">
                     <div class="pricing-plan pricing-plan--starter">
                         <header class="header-plan">
                             <p class="plan-name">Starter</p>
@@ -367,13 +375,13 @@
                     </div>
                 </div>
 
-                <div class="container grid">
+                <div class="pricing-container container grid">
                     <aside class="plan-detail">
                         Prices include all applicable taxes. You can cancel at any time. Both plans include the
                         following
                     </aside>
                 </div>
-                <div class="container grid grid--4-col">
+                <div class="plan-feature-container container grid grid--4-col">
                     <div class="plan-feature">
                         <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
                         <p class="feature-title"> Never cook again! </p>
